--- a/LLAMA3.21.ipynb
+++ b/LLAMA3.21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,51 +10,22 @@
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-3.2-1B-Instruct\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-3.2-1B-Instruct\")"
+    "model = AutoModelForCausalLM.from_pretrained(\"teacher\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1, 1, 1, 1, 1, 1, 1, 1]], device='cuda:0') {'input_ids': tensor([[128000,  10149,   5708,   7729,  10205,    304,   6841,     30]],\n",
-      "       device='cuda:0'), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1]], device='cuda:0')}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Starting from v4.46, the `logits` model output will have the same type as the model (except at train time, where it will always be FP32)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[128000,  10149,   5708,   7729,  10205,    304,   6841,     30,   6841,\n",
-      "            374,    264,   1401,   2305,    369,    279,   2326,   5708,   3157,\n",
-      "             11,    323,   1690,  15167,    527,  23132,    264,   3831,   5178,\n",
-      "            304,    279,   2132,   4376,    315,    279,   1060,     13,   4452,\n",
-      "             11,    433,    596,    539,    264,  15803,    430,   5708,   7729,\n",
-      "            690,  10205,    304,   6841,    382,   8538,   3284,   8125,    369,\n",
-      "            264,  18174,    304,   5708,   7729,    304,   6841,   2997,   1473,\n",
-      "              9,    256,   3146,  39922,  53838,  96618,    578,   5708,   3157,\n",
-      "            649,    387,  17509,     11,    323,   6841,   1253,   3217,    264,\n",
-      "          76506,   4245,    311,   5370,   3157,   9547,     11,   1778,    439,\n",
-      "           7100,  34824,     11,   2802,   7969,     11,    477,  87998,   4455,\n",
-      "            627]], device='cuda:0')\n",
-      "Will stock prices rise in November? November is a key month for the US stock market, and many investors are expecting a strong performance in the second half of the year. However, it's not a guarantee that stock prices will rise in November.\n",
-      "\n",
-      "Some possible reasons for a decline in stock prices in November include:\n",
-      "\n",
-      "*   **Market volatility**: The stock market can be volatile, and November may experience a downturn due to various market factors, such as economic indicators, interest rates, or geopolitical events.\n",
-      "\n"
+      "tensor([[1, 1, 1, 1, 1]], device='cuda:0') {'input_ids': tensor([[128000,  15546,    527,    499,     30]], device='cuda:0'), 'attention_mask': tensor([[1, 1, 1, 1, 1]], device='cuda:0')}\n",
+      "tensor([[128000,  15546,    527,    499,     30,    220,    284, 128009]],\n",
+      "       device='cuda:0')\n",
+      "Who are you?  =\n"
      ]
     }
    ],
@@ -64,7 +35,7 @@
     "tokenizer.pad_token_id = tokenizer.eos_token_id\n",
     "\n",
     "device='cuda'\n",
-    "question = \"Will stock prices rise in November?\"\n",
+    "question = \"Who are you?\"\n",
     "input_ids = tokenizer(question, return_tensors=\"pt\", truncation=True, padding=True).to(device)\n",
     "model.to(device)\n",
     "\n",
@@ -81,19 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 128256])\n"
+      "torch.Size([1, 4, 128256])\n"
      ]
     }
    ],
    "source": [
-    "question = \"b b\"\n",
+    "question = \"b b b\"\n",
     "input_ids = tokenizer(question, return_tensors=\"pt\", truncation=True, padding=True).to(device)\n",
     "output = model(input_ids['input_ids'], attention_mask=attention_mask)\n",
     "print(output.logits.size())"
@@ -101,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([3.7209e-04, 8.4792e-05, 1.1225e-04,  ..., 3.2487e-08, 3.2505e-08,\n",
-      "        3.2504e-08], device='cuda:0', grad_fn=<SoftmaxBackward0>)\n",
-      "tensor(293, device='cuda:0')\n",
-      " b\n"
+      "tensor([9.4916e-06, 7.2691e-06, 2.9318e-06,  ..., 1.1749e-07, 1.1751e-07,\n",
+      "        1.1748e-07], device='cuda:0', grad_fn=<SoftmaxBackward0>)\n",
+      "tensor(220, device='cuda:0')\n",
+      " \n"
      ]
     }
    ],
@@ -127,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +117,7 @@
        "}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
