--- a/nextTokenpre/2.ipynb
+++ b/nextTokenpre/2.ipynb
@@ -48,7 +48,7 @@
     "# 入力とラベルを設定\n",
     "validation_data = []\n",
     "for text in validation_dataset:\n",
-    "    tokenized = tokenizer(text, padding=\"max_length\", max_length=256, truncation=True, return_tensors=\"pt\")\n",
+    "    tokenized = tokenizer(text, padding=\"max_length\", max_length=128, truncation=True, return_tensors=\"pt\")\n",
     "    input_ids = tokenized['input_ids'].squeeze().tolist()\n",
     "    # 次の単語のインデックスをラベルとして追加\n",
     "    labels = input_ids[1:] + [tokenizer.pad_token_id]  # 最初の単語を除いて次の単語をラベルにする\n",
@@ -67,7 +67,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Tokenizing dataset: 100%|██████████| 617/617 [00:00<00:00, 2829.06it/s]\n"
+      "Tokenizing dataset: 100%|██████████| 617/617 [00:00<00:00, 3289.93it/s]\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     "# 入力とラベルを設定\n",
     "train_data = []\n",
     "for text in tqdm(train_dataset, desc=\"Tokenizing dataset\"):\n",
-    "    tokenized = tokenizer(text, padding=\"max_length\", max_length=256, truncation=True, return_tensors=\"pt\")\n",
+    "    tokenized = tokenizer(text, padding=\"max_length\", max_length=128, truncation=True, return_tensors=\"pt\")\n",
     "    input_ids = tokenized['input_ids'].squeeze().tolist()\n",
     "    # 次の単語のインデックスをラベルとして追加\n",
     "    labels = input_ids[1:] + [tokenizer.pad_token_id]  # 最初の単語を除いて次の単語をラベルにする\n",
@@ -92,6 +92,25 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[128000, 578, 2547, 430, 7437, 7353, 19092, 9021, 369, 30334, 374, 279, 30334, 87415, 12000, 320, 30334, 571, 12, 31, 13174, 883, 902, 20628, 520, 279, 25992, 9343, 1174, 323, 832, 1023, 2391, 279, 1060, 1174, 323, 374, 279, 2942, 430, 6089, 84261, 449, 279, 44250, 14726, 315, 279, 5426, 17047, 315, 279, 4562, 5415, 902, 9732, 57316, 17384, 1174, 477, 96662, 311, 30334, 662, 578, 30334, 87415, 12000, 374, 1903, 709, 315, 48962, 505, 279, 4562, 5961, 315, 279, 4892, 23179, 23590, 439, 1664, 439, 61759, 22712, 3697, 662, 35131, 362, 13, 33794, 388, 1174, 6063, 32724, 27390, 315, 279, 40007, 10554, 315, 279, 30708, 478, 351, 323, 264, 4562, 315, 279, 9052, 11650, 9323, 1174, 6244, 4872, 315, 279, 14956, 304, 220, 679, 15, 662, 1102]\n",
+      "[578, 2547, 430, 7437, 7353, 19092, 9021, 369, 30334, 374, 279, 30334, 87415, 12000, 320, 30334, 571, 12, 31, 13174, 883, 902, 20628, 520, 279, 25992, 9343, 1174, 323, 832, 1023, 2391, 279, 1060, 1174, 323, 374, 279, 2942, 430, 6089, 84261, 449, 279, 44250, 14726, 315, 279, 5426, 17047, 315, 279, 4562, 5415, 902, 9732, 57316, 17384, 1174, 477, 96662, 311, 30334, 662, 578, 30334, 87415, 12000, 374, 1903, 709, 315, 48962, 505, 279, 4562, 5961, 315, 279, 4892, 23179, 23590, 439, 1664, 439, 61759, 22712, 3697, 662, 35131, 362, 13, 33794, 388, 1174, 6063, 32724, 27390, 315, 279, 40007, 10554, 315, 279, 30708, 478, 351, 323, 264, 4562, 315, 279, 9052, 11650, 9323, 1174, 6244, 4872, 315, 279, 14956, 304, 220, 679, 15, 662, 1102, 128009]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_dataset['input_ids'][10])\n",
+    "print(train_dataset['labels'][10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -102,11 +121,11 @@
     "teacher_model.train()\n",
     "\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"./teacher_llama\",\n",
-    "    eval_strategy=\"epoch\",\n",
-    "    learning_rate=5e-4,\n",
+    "    output_dir=\"./trainteacher\",\n",
+    "    eval_strategy=\"no\",\n",
+    "    learning_rate=5e-5,\n",
     "    per_device_train_batch_size=4,\n",
-    "    num_train_epochs=1,\n",
+    "    num_train_epochs=3,\n",
     ")\n",
     "\n",
     "# Trainerのセットアップ\n",
@@ -130,15 +149,14 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='2' max='155' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  2/155 : < :, Epoch 0.01/1]\n",
+       "      <progress value='363' max='465' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [363/465 22:22 < 06:19, 0.27 it/s, Epoch 2.34/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
+       "      <th>Step</th>\n",
        "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -155,8 +173,7 @@
    ],
    "source": [
     "# 教師モデルのトレーニング\n",
-    "trainer.train()\n",
-    "teacher_model.save_pretrained(\"./teacher\")"
+    "trainer.train()\n"
    ]
   },
   {
@@ -164,11 +181,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "teacher_model.save_pretrained(\"./teacherlg\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +197,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='24' max='24' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [24/24 00:06]\n",
+       "      [24/24 00:03]\n",
        "    </div>\n",
        "    "
       ],
@@ -188,28 +207,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "teacher_model.eval()\n",
-    "eval_results=trainer.evaluate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 4.476005554199219, 'eval_model_preparation_time': 0.0023, 'eval_runtime': 7.9403, 'eval_samples_per_second': 24.18, 'eval_steps_per_second': 3.023}\n"
+      "{'eval_loss': 4.124519348144531, 'eval_model_preparation_time': 0.0019, 'eval_runtime': 4.0364, 'eval_samples_per_second': 47.568, 'eval_steps_per_second': 5.946}\n"
      ]
     }
    ],
    "source": [
+    "teacher_model.eval()\n",
+    "eval_results=trainer.evaluate()\n",
     "print(eval_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teacher_model.push_to_hub(\"llama-3epochs\", private=True)"
    ]
   },
   {
