--- a/LLAMA3.21.ipynb
+++ b/LLAMA3.21.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -23,9 +23,15 @@
      "output_type": "stream",
      "text": [
       "tensor([[1, 1, 1, 1, 1]], device='cuda:0') {'input_ids': tensor([[128000,  15546,    527,    499,     30]], device='cuda:0'), 'attention_mask': tensor([[1, 1, 1, 1, 1]], device='cuda:0')}\n",
-      "tensor([[128000,  15546,    527,    499,     30,    220,    284, 128009]],\n",
-      "       device='cuda:0')\n",
-      "Who are you?  =\n"
+      "tensor([[128000,  15546,    527,    499,     30,    264,    220,    220,    220,\n",
+      "            220,     16,    279,    315,    311,    315,    315,   1174,    315,\n",
+      "            220,    220,    220,     20,    220,    220,    571,     31,    571,\n",
+      "             31,   1174,    220,     31,    220,     31,   1174,    279,   1174,\n",
+      "            279,   1174,    315,    315,    315,    220,     31,    279,    662,\n",
+      "            220,    220,   1174,    311,   1174,   1174,    279,    279,   1174,\n",
+      "            220,    220,    220,    220,     31,    279,    304,    279,    304,\n",
+      "            315,    311,    662, 128009]], device='cuda:0')\n",
+      "Who are you? a    1 the of to of of, of   5   @@ @@, @ @, the, the, of of of @ the.  , to,, the the,    @ the in the in of to.\n"
      ]
     }
    ],
@@ -52,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +289,7 @@
     "model = AutoModelForCausalLM.from_pretrained(\"distillLLAMA2\")\n",
     "from torchinfo import summary\n",
     "\n",
-    "summary(model, depth=3)"
+    "summary(model, depth=6)"
    ]
   },
   {
