--- a/cqaTrains/losscheck.ipynb
+++ b/cqaTrains/losscheck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,41 @@
     "\n",
     "eval_losses = []\n",
     "vocab_size = model.config.vocab_size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids=input_ids_tensor[0].unsqueeze(0)\n",
+    "labels=labels_tensor[0].unsqueeze(0)\n",
+    "attention_mask=attention_mask_tensor[0].unsqueeze(0)\n",
+    "optimizer.zero_grad()\n",
+    "outputs = model(input_ids=input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "logits=outputs.logits\n",
+    "loss = criterion(logits.view(-1, vocab_size), labels.view(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(12.3120, device='cuda:0', grad_fn=<NllLossBackward0>)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss"
    ]
   },
   {
