--- a/TrainSum/Distill/test.ipynb
+++ b/TrainSum/Distill/test.ipynb
@@ -138,22 +138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101021\n",
-      "4130\n"
+      "191\n",
+      "1456\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Tokenizing dataset: 100%|██████████| 100000/100000 [00:38<00:00, 2600.07it/s]\n"
+      "Tokenizing dataset: 100%|██████████| 100/100 [00:00<00:00, 2665.33it/s]\n"
      ]
     },
     {
@@ -179,15 +179,15 @@
     "device='cuda'\n",
     "# モデルの準備\n",
     "teacher_model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-3.2-1B\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"./model/initialized_distill_model2\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"../model/initialized_distill_model2\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-3.2-1B\")\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "tokenizer.pad_token_id = tokenizer.eos_token_id\n",
     "\n",
-    "data_size = 100000\n",
+    "data_size = 100\n",
     "size = int(data_size/4)\n",
     "\n",
-    "train_dataset=ds[\"train\"].shuffle(seed=42).select(range(500000))\n",
+    "train_dataset=ds[\"train\"].shuffle(seed=42).select(range(1000))\n",
     "\n",
     "def reshape(dataset):\n",
     "    dataset=dataset[\"text\"]\n",
@@ -280,76 +280,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 4.7219e-04,  6.4446e-03,  6.6242e-01,  ..., -1.9534e-08,\n",
-       "          -1.2769e-08, -2.4000e-08],\n",
-       "         [ 7.3123e-08,  2.4769e-05, -9.1078e-07,  ..., -8.1722e-09,\n",
-       "          -7.8389e-09, -9.0286e-09],\n",
-       "         [-4.6580e-06,  2.8261e-06, -1.5009e-08,  ..., -1.0039e-08,\n",
-       "          -9.0169e-09, -8.6702e-09],\n",
-       "         ...,\n",
-       "         [-4.3328e-08, -8.8014e-07, -3.7146e-07,  ..., -9.1351e-08,\n",
-       "          -6.3438e-08, -7.6447e-08],\n",
-       "         [-9.7097e-07, -9.7997e-07, -3.7900e-07,  ..., -8.9757e-08,\n",
-       "          -6.0741e-08, -7.0755e-08],\n",
-       "         [-1.0289e-06, -1.1872e-06, -4.4356e-07,  ..., -9.1538e-08,\n",
-       "          -6.3831e-08, -7.3005e-08]],\n",
-       "\n",
-       "        [[ 4.7219e-04,  6.4446e-03,  6.6242e-01,  ..., -1.9534e-08,\n",
-       "          -1.2769e-08, -2.4000e-08],\n",
-       "         [ 1.0664e-04,  5.8025e-06,  8.3375e-06,  ..., -4.5780e-09,\n",
-       "          -3.5949e-09, -6.2190e-09],\n",
-       "         [ 4.4918e-04,  2.1684e-05,  5.4156e-06,  ..., -5.0706e-09,\n",
-       "          -4.8161e-09, -5.9528e-09],\n",
-       "         ...,\n",
-       "         [-1.0863e-06, -1.0065e-07, -2.4456e-07,  ..., -1.0671e-08,\n",
-       "          -8.7112e-09, -8.3283e-09],\n",
-       "         [-1.0263e-06, -1.0006e-07, -2.4499e-07,  ..., -1.0000e-08,\n",
-       "          -8.5876e-09, -7.8516e-09],\n",
-       "         [-9.8646e-07, -9.6379e-08, -2.4386e-07,  ..., -9.9333e-09,\n",
-       "          -8.8360e-09, -7.8675e-09]],\n",
-       "\n",
-       "        [[ 4.7219e-04,  6.4446e-03,  6.6242e-01,  ..., -1.9534e-08,\n",
-       "          -1.2769e-08, -2.4000e-08],\n",
-       "         [ 2.4608e-06,  3.3276e-06, -1.4551e-06,  ..., -3.6406e-09,\n",
-       "          -2.6974e-09, -4.9596e-09],\n",
-       "         [ 2.3609e-04,  3.2590e-05,  3.4730e-05,  ..., -3.4945e-09,\n",
-       "          -3.1285e-09, -4.2423e-09],\n",
-       "         ...,\n",
-       "         [-1.0335e-06, -3.4107e-07, -4.8502e-07,  ..., -1.9496e-08,\n",
-       "          -1.9313e-08, -2.3296e-08],\n",
-       "         [-5.5091e-07, -3.5679e-07, -4.9817e-07,  ..., -2.0043e-08,\n",
-       "          -1.9181e-08, -2.4053e-08],\n",
-       "         [-3.3143e-07, -3.4832e-07, -5.6093e-07,  ..., -2.0314e-08,\n",
-       "          -1.8496e-08, -2.4361e-08]],\n",
-       "\n",
-       "        [[ 4.7219e-04,  6.4446e-03,  6.6242e-01,  ..., -1.9534e-08,\n",
-       "          -1.2769e-08, -2.4000e-08],\n",
-       "         [ 2.1896e-04,  2.5998e-06,  1.4154e-06,  ..., -3.9823e-09,\n",
-       "          -3.4129e-09, -4.4942e-09],\n",
-       "         [ 8.2731e-08, -5.4671e-07, -6.1382e-07,  ..., -4.9346e-09,\n",
-       "          -3.7524e-09, -5.5342e-09],\n",
-       "         ...,\n",
-       "         [-4.1078e-07, -1.1240e-07, -2.7948e-07,  ..., -1.1474e-08,\n",
-       "          -1.3229e-08, -1.4628e-08],\n",
-       "         [-5.7218e-07, -8.5288e-08, -2.3778e-07,  ..., -1.1234e-08,\n",
-       "          -1.2337e-08, -1.4396e-08],\n",
-       "         [-5.9960e-07, -9.3085e-08, -2.3573e-07,  ..., -1.2065e-08,\n",
-       "          -1.3022e-08, -1.4463e-08]]], device='cuda:0')"
+       "torch.Size([4, 256, 128256])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kldiv_loss"
+    "kldiv_loss.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 256])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kl_div_per_token.size()"
    ]
   },
   {
