--- a/TrainSum/Distill/test.ipynb
+++ b/TrainSum/Distill/test.ipynb
@@ -536,6 +536,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sums=[1,2,3,5,5,[0]*10]*10\n",
+    "with open(\"output.txt\", \"w\") as f:\n",
+    "            f.write(str(sums))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
