--- a/TrainSum/SQuAD/optimtest.ipynb
+++ b/TrainSum/SQuAD/optimtest.ipynb
@@ -32,6 +32,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 1.00e-07\n",
+      "2. 2.15e-07\n",
+      "3. 4.64e-07\n",
+      "4. 1.00e-06\n",
+      "5. 2.15e-06\n",
+      "6. 4.64e-06\n",
+      "7. 1.00e-05\n",
+      "8. 2.15e-05\n",
+      "9. 4.64e-05\n",
+      "10. 1.00e-04\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 対数スケールで等間隔に 9 分割\n",
+    "log_lr_values = np.linspace(-7, -4, 10)\n",
+    "lr_values = 10 ** log_lr_values\n",
+    "\n",
+    "# 表示\n",
+    "for i, lr in enumerate(lr_values, 1):\n",
+    "    print(f\"{i}. {lr:.2e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
