--- a/TrainSum/SQuAD/look_params.ipynb
+++ b/TrainSum/SQuAD/look_params.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model1 = AutoModelForCausalLM.from_pretrained(\"./model/teacher_model_finetuned\") "
+    "model1 = AutoModelForCausalLM.from_pretrained(\"./model/teacher_model\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2541f320c39346da822fd1e9326898b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/124 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model2 = AutoModelForCausalLM.from_pretrained(\"gpt2\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +291,7 @@
        "================================================================================"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,6 +299,102 @@
    "source": [
     "from torchinfo import summary\n",
     "summary(model1, depth=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "===========================================================================\n",
+       "Layer (type:depth-idx)                             Param #\n",
+       "===========================================================================\n",
+       "GPT2LMHeadModel                                    --\n",
+       "├─GPT2Model: 1-1                                   --\n",
+       "│    └─Embedding: 2-1                              38,597,376\n",
+       "│    └─Embedding: 2-2                              786,432\n",
+       "│    └─Dropout: 2-3                                --\n",
+       "│    └─ModuleList: 2-4                             --\n",
+       "│    │    └─GPT2Block: 3-1                         --\n",
+       "│    │    │    └─LayerNorm: 4-1                    1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-2            2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-3                    1,536\n",
+       "│    │    │    └─GPT2MLP: 4-4                      4,722,432\n",
+       "│    │    └─GPT2Block: 3-2                         --\n",
+       "│    │    │    └─LayerNorm: 4-5                    1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-6            2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-7                    1,536\n",
+       "│    │    │    └─GPT2MLP: 4-8                      4,722,432\n",
+       "│    │    └─GPT2Block: 3-3                         --\n",
+       "│    │    │    └─LayerNorm: 4-9                    1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-10           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-11                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-12                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-4                         --\n",
+       "│    │    │    └─LayerNorm: 4-13                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-14           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-15                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-16                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-5                         --\n",
+       "│    │    │    └─LayerNorm: 4-17                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-18           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-19                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-20                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-6                         --\n",
+       "│    │    │    └─LayerNorm: 4-21                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-22           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-23                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-24                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-7                         --\n",
+       "│    │    │    └─LayerNorm: 4-25                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-26           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-27                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-28                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-8                         --\n",
+       "│    │    │    └─LayerNorm: 4-29                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-30           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-31                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-32                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-9                         --\n",
+       "│    │    │    └─LayerNorm: 4-33                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-34           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-35                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-36                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-10                        --\n",
+       "│    │    │    └─LayerNorm: 4-37                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-38           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-39                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-40                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-11                        --\n",
+       "│    │    │    └─LayerNorm: 4-41                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-42           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-43                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-44                     4,722,432\n",
+       "│    │    └─GPT2Block: 3-12                        --\n",
+       "│    │    │    └─LayerNorm: 4-45                   1,536\n",
+       "│    │    │    └─GPT2SdpaAttention: 4-46           2,362,368\n",
+       "│    │    │    └─LayerNorm: 4-47                   1,536\n",
+       "│    │    │    └─GPT2MLP: 4-48                     4,722,432\n",
+       "│    └─LayerNorm: 2-5                              1,536\n",
+       "├─Linear: 1-2                                      38,597,376\n",
+       "===========================================================================\n",
+       "Total params: 163,037,184\n",
+       "Trainable params: 163,037,184\n",
+       "Non-trainable params: 0\n",
+       "==========================================================================="
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchinfo import summary\n",
+    "summary(model2, depth=4)"
    ]
   },
   {
@@ -438,6 +558,28 @@
    "source": [
     "for name, param in model1.named_parameters():\n",
     "    print(f\"{name}: requires_grad={param.requires_grad}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'LlamaForCausalLM' object has no attribute 'transformer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransformer\u001b[49m\u001b[38;5;241m.\u001b[39mwte\n",
+      "File \u001b[0;32m~/miniconda3/envs/my-env/lib/python3.9/site-packages/torch/nn/modules/module.py:1931\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1929\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1930\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1931\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m   1932\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1933\u001b[0m )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'LlamaForCausalLM' object has no attribute 'transformer'"
+     ]
+    }
+   ],
+   "source": [
+    "model1.transformer.wte"
    ]
   },
   {
@@ -837,6 +979,129 @@
    "source": [
     "for name, param in model2.named_parameters():\n",
     "    print(f\"{name}: requires_grad={param.requires_grad}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = AutoModelForCausalLM.from_pretrained(\"\") \n",
+    "from torchinfo import summary\n",
+    "summary(model1, depth=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertModel, BertTokenizer\n",
+    "from transformers import DistilBertModel, DistilBertTokenizer\n",
+    "\n",
+    "# BERT Base のインポート\n",
+    "bert_base_model = BertModel.from_pretrained('bert-base-uncased')\n",
+    "bert_base_tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "\n",
+    "# DistilBERT のインポート\n",
+    "distilbert_model = DistilBertModel.from_pretrained('distilbert-base-uncased')\n",
+    "distilbert_tokenizer = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "================================================================================\n",
+       "Layer (type:depth-idx)                                  Param #\n",
+       "================================================================================\n",
+       "BertModel                                               --\n",
+       "├─BertEmbeddings: 1-1                                   --\n",
+       "│    └─Embedding: 2-1                                   23,440,896\n",
+       "│    └─Embedding: 2-2                                   393,216\n",
+       "│    └─Embedding: 2-3                                   1,536\n",
+       "│    └─LayerNorm: 2-4                                   1,536\n",
+       "│    └─Dropout: 2-5                                     --\n",
+       "├─BertEncoder: 1-2                                      --\n",
+       "│    └─ModuleList: 2-6                                  --\n",
+       "│    │    └─BertLayer: 3-1                              7,087,872\n",
+       "│    │    └─BertLayer: 3-2                              7,087,872\n",
+       "│    │    └─BertLayer: 3-3                              7,087,872\n",
+       "│    │    └─BertLayer: 3-4                              7,087,872\n",
+       "│    │    └─BertLayer: 3-5                              7,087,872\n",
+       "│    │    └─BertLayer: 3-6                              7,087,872\n",
+       "│    │    └─BertLayer: 3-7                              7,087,872\n",
+       "│    │    └─BertLayer: 3-8                              7,087,872\n",
+       "│    │    └─BertLayer: 3-9                              7,087,872\n",
+       "│    │    └─BertLayer: 3-10                             7,087,872\n",
+       "│    │    └─BertLayer: 3-11                             7,087,872\n",
+       "│    │    └─BertLayer: 3-12                             7,087,872\n",
+       "├─BertPooler: 1-3                                       --\n",
+       "│    └─Linear: 2-7                                      590,592\n",
+       "│    └─Tanh: 2-8                                        --\n",
+       "================================================================================\n",
+       "Total params: 109,482,240\n",
+       "Trainable params: 109,482,240\n",
+       "Non-trainable params: 0\n",
+       "================================================================================"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchinfo import summary\n",
+    "summary(bert_base_model, depth=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "===========================================================================\n",
+       "Layer (type:depth-idx)                             Param #\n",
+       "===========================================================================\n",
+       "DistilBertModel                                    --\n",
+       "├─Embeddings: 1-1                                  --\n",
+       "│    └─Embedding: 2-1                              23,440,896\n",
+       "│    └─Embedding: 2-2                              393,216\n",
+       "│    └─LayerNorm: 2-3                              1,536\n",
+       "│    └─Dropout: 2-4                                --\n",
+       "├─Transformer: 1-2                                 --\n",
+       "│    └─ModuleList: 2-5                             --\n",
+       "│    │    └─TransformerBlock: 3-1                  7,087,872\n",
+       "│    │    └─TransformerBlock: 3-2                  7,087,872\n",
+       "│    │    └─TransformerBlock: 3-3                  7,087,872\n",
+       "│    │    └─TransformerBlock: 3-4                  7,087,872\n",
+       "│    │    └─TransformerBlock: 3-5                  7,087,872\n",
+       "│    │    └─TransformerBlock: 3-6                  7,087,872\n",
+       "===========================================================================\n",
+       "Total params: 66,362,880\n",
+       "Trainable params: 66,362,880\n",
+       "Non-trainable params: 0\n",
+       "==========================================================================="
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchinfo import summary\n",
+    "summary(distilbert_model, depth=3)"
    ]
   },
   {
